--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,123 @@
-body {
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-family: 'Lato', sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.container{
+  display: grid;
+  max-width: 100%;
+  grid-template-areas: "mainLogo mainLogo mainLogo mainLogo mainLogo mainLogo "
+                        "nav nav nav nav nav nav"
+                        "carrusel carrusel carrusel carrusel carrusel carrusel"
+                        "mision mision mision text-mision text-mision text-mision"
+                        "text-vision text-vision text-vision vision vision vision"
+                        "objetivos objetivos objetivos objetivos objetivos objetivos";
+  grid-template-columns: 16.6% 16.6% 16.6% 16.6% 16.6% 16.6%;
+  grid-template-rows: 100px 80px 600px 250px 250px 300px;
 }
+img{
+  width: 100;
+  height: 50px;
+}
+.mainLogo{
+  grid-area: mainLogo;
+  /* border: 2px solid red; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
+}
+
+.nav{
+  grid-area: nav;
+  /* border: 2px solid red; */
+  display: flex;
+  justify-content: center;
+  background-color: rgb(165, 161, 159);
+}
+
+.nav-link{
+  text-decoration: none;
+  color: black;
+}
+
+.nav-menu{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  list-style: none;
+}
+
+.nav-menu-item{
+  justify-content: center;
+  font-size: 20px;
+  margin: 0 30px;
+  font-family:'Lato', sans-serif; 
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+.carrusel{
+  grid-area:carrusel;
+  border: 2px solid red;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+
+.nosotros{
+  font-size: 80px;
+  font-weight: bold;
+
+}
+
+.mision{
+  grid-area: mision;
+  border: 2px solid red;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.text-mision{
+  grid-area: text-mision;
+  border: 2px solid red;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 30px;
+}
+
+.vision{
+  grid-area: vision;
+  border: 2px solid red;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.text-vision{
+  grid-area: text-vision;
+  border: 2px solid red;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 30px;
+}
+h2{
+  margin: 20px 0;
+}
+
+.objetivos{
+  grid-area: objetivos;
+  border: 2px solid red;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
