--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
   padding: 0;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-family: 'Lato', sans-serif;
+  
 }
 
 .container{
@@ -68,11 +69,80 @@ img{
 
 .carrusel{
   grid-area:carrusel;
-  border: 2px solid red;
+  /* border: 2px solid red; */
+  display: flex;
+  /* flex-direction: column; */
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  position: relative;
+  /* margin: 0 300px; */
+}
+
+.controles{
+  position: absolute;
+  top:0;
+  z-index: 20;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+}
+
+.btn-carrusel{
+  pointer-events: all;
+  background: none;
+  border: none;
+  cursor: pointer;
+  outline: none;
+  width: 80px;
+  text-align: center;
+  height: 100%;
+  position: absolute;
+  transition: .3s ease all;
+  margin: 0 50px;
+  filter: drop-shadow(2px 2px 2px rgb(83, 83, 83) );
+  
+}
+
+/* .btn-carrusel:hover{
+  background: rgba(63, 61, 61, 0.2);
+  fill: azure;
+} */
+
+
+.derecho{
+  right: 0;
+  /* left: 0; */
+}
+
+.infoCarrusel{
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  min-width: 100%;
+  overflow: hidden;
+  transition: .3s ease all;/**/
+  z-index: 10;/**/
+  max-height: 921px;
+}
+
+/* .derecha{
+  right: 0;
+}
+.izquierda{
+  left: 0;
+} */
+
+.img-carrusel{
+  width: 920px;
+  height:auto;
+  opacity: 60%; 
+}
+
+.contendorSlide{
+  display: flex;
+  flex-wrap: nowrap;
 }
 
 
