--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,8 @@
   margin: 0;
   padding: 0;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  font-family: 'Lato', sans-serif;
+  /* font-family: 'Lato', sans-serif; */
+font-family: 'Prompt', sans-serif;
   
 }
 
@@ -21,12 +22,12 @@
                         "tipoEmpresa tipoEmpresa talentoHumano talentoHumano costoDesarrollo costoDesarrollo"
                         "footer footer footer footer footer footer";
   grid-template-columns: 16.6% 16.6% 16.6% 16.6% 16.6% 16.6%;
-  grid-template-rows: 100px 80px 700px 350px 350px 300px 400px 450px 550px 500px 100px;
+  grid-template-rows: 130px 80px 700px 350px 350px 350px 550px 550px 550px 500px 100px;
 }
 
 img{
   width: auto;
-  height: 80px;
+  height: 100px;
 }
 
 .mainLogo{
@@ -43,12 +44,14 @@ img{
   /* border: 2px solid red; */
   display: flex;
   justify-content: center;
-  background-color: rgb(165, 161, 159);
+  background-color: rgb(84, 223, 158);
+  font-size: 20px;
 }
 
 .nav-link{
   text-decoration: none;
-  color: black;
+  color: white;
+  /* color: black; */
 }
 
 .nav-menu{
@@ -152,47 +155,53 @@ img{
 
 }
 
-.mision{
+.mision {
   grid-area: mision;
-  border: 2px solid red;
+  /* border: 2px solid red; */
   display: flex;
   justify-content: center;
   align-items: center;
+  font-size: 50px;
 }
 
-.text-mision{
+.text-mision {
   grid-area: text-mision;
-  border: 2px solid red;
+  /* border: 2px solid red; */
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 0 30px;
+  padding: 0 120px;
+  text-justify: justify;
+ 
 }
 
 .vision{
   grid-area: vision;
-  border: 2px solid red;
+  /* border: 2px solid red; */
   display: flex;
   justify-content: center;
   align-items: center;
+  font-size: 50px;
 }
 
 .text-vision{
   grid-area: text-vision;
-  border: 2px solid red;
+  /* border: 2px solid red; */
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 0 30px;
+  padding: 0 120px;
+  text-justify: justify;
 }
 
 h2{
   margin: 20px 0;
+  font-size: 40px;
 }
 
 .objetivos{
   grid-area: objetivos;
-  border: 2px solid red;
+  /* border: 2px solid red; */
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -207,19 +216,30 @@ h3{
   grid-area: eslogan;
   display: flex;
   justify-content: center;
-  border: 2px solid red;
+  /* border: 2px solid red; */
+  font-size: 25px;
 }
 
 .img-empre {
   grid-area: img-empre;
   display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* border: 2px solid red; */
+  font-size: 25px;
+}
+
+.img{
+  height: 200px;
+  width: 500px;
+  display: flex;
   justify-content: center;
-  border: 2px solid red;
-  
+  align-items: center;
+  border: 3px solid rgb(29, 13, 13);
 }
 
 .estudioFacti{
-  border: 2px solid red;
+  /* border: 2px solid red; */
   grid-area:estudioFacti ;
   display: flex;
   justify-content: center;
@@ -228,7 +248,7 @@ h3{
 
 .estudioMerca{
   grid-area:estudioMerca;
-  border: 2px solid red;
+  /* border: 2px solid red; */
   display: flex;
   justify-content: center;
 }
