--- a/src/index.css
+++ b/src/index.css
@@ -232,12 +232,13 @@ h3{
 }
 
 .img{
-  height: 200px;
+  height: 500px;
   width: 500px;
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 3px solid rgb(29, 13, 13);
+  border: 3px solid rgb(15, 15, 15);
+  border-radius: 100px ;
 }
 
 .estudioFacti{
