--- a/src/index.css
+++ b/src/index.css
@@ -89,8 +89,8 @@ img{
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(7.7px);
   -webkit-backdrop-filter: blur(7.7px);
-  filter: blur(8px);
-  -webkit-filter: blur(8px);
+  filter: blur(5px);
+  -webkit-filter: blur(5px);
 
 }
 
@@ -152,8 +152,75 @@ img{
   transition: .3s ease all;
   margin: 0 50px;
   filter: drop-shadow(2px 2px 2px rgb(59, 187, 87) );
+}
+
+.btn-carrusel:focus{
+  background-color: #bebebe00;
+}
+
+.glassP{
+  z-index: 2;
+  width: 920px;
+}
+
+.overlapGlass1{
   
 }
+.overlapGlass{
+  display: flex;
+  position: absolute;
+  overflow: hidden;
+  width: 900px;
+  height: auto;
+  top: 0;
+  
+
+  z-index: 2;
+  gap: 20px;
+    border-radius: 15px;
+    backdrop-filter: blur(11px);
+    background-color: rgba(255,255,255, 0.075);
+    box-shadow: rgba(0, 0, 0, 0.3) 2px 8px 8px;
+    border: 2px rgba(255,255,255,0.4) solid;
+    border-bottom: 2px rgba(40,40,40,0.35) solid;
+    border-right: 2px rgba(40,40,40,0.35) solid;
+}
+
+.glassImageCont{
+  position: relative;
+  z-index: 5;
+    display: flex;
+    flex-direction: column;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    border-radius: 15px;
+    backdrop-filter: blur(11px);
+    background-color: rgba(255,255,255, 0.075);
+    box-shadow: rgba(0, 0, 0, 0.3) 2px 8px 8px;
+    border: 2px rgba(255,255,255,0.4) solid;
+    border-bottom: 2px rgba(40,40,40,0.35) solid;
+    border-right: 2px rgba(40,40,40,0.35) solid;
+    padding: 1rem;
+}
+
+.blurImg{
+  filter: blur(8px);
+}
+
+.img-carrusel{
+  
+  position: relative;
+  z-index: 1;
+  width: 920px;
+  height:auto;
+  opacity: 100%;
+  object-fit: fill;
+  border-radius: 15px;
+}
+
 
 /* .btn-carrusel:hover{
   background: rgba(63, 61, 61, 0.2);
@@ -183,6 +250,12 @@ img{
   transition: .3s ease all;/**/
   z-index: 10;/**/
   max-height: 921px;
+
+
+  
+}
+.imageCarrselContainer{
+  display:flex;
 }
 
 /* .derecha{
@@ -192,11 +265,7 @@ img{
   left: 0;
 } */
 
-.img-carrusel{
-  width: 920px;
-  height:auto;
-  opacity: 75%; 
-}
+
 
 .contendorSlide{
   display: flex;
