--- a/src/index.css
+++ b/src/index.css
@@ -161,49 +161,34 @@ img{
 .glassP{
   z-index: 2;
   width: 920px;
+  text-align: center;
+  margin: 1rem;
 }
 
-.overlapGlass1{
-  
-}
-.overlapGlass{
-  display: flex;
-  position: absolute;
-  overflow: hidden;
-  width: 900px;
-  height: auto;
-  top: 0;
-  
+.overLapGlass{
 
-  z-index: 2;
-  gap: 20px;
-    border-radius: 15px;
-    backdrop-filter: blur(11px);
-    background-color: rgba(255,255,255, 0.075);
-    box-shadow: rgba(0, 0, 0, 0.3) 2px 8px 8px;
-    border: 2px rgba(255,255,255,0.4) solid;
-    border-bottom: 2px rgba(40,40,40,0.35) solid;
-    border-right: 2px rgba(40,40,40,0.35) solid;
+
+  padding: 1rem;
+
+
 }
 
 .glassImageCont{
-  position: relative;
-  z-index: 5;
-    display: flex;
-    flex-direction: column;
-    color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
-    border-radius: 15px;
-    backdrop-filter: blur(11px);
-    background-color: rgba(255,255,255, 0.075);
-    box-shadow: rgba(0, 0, 0, 0.3) 2px 8px 8px;
-    border: 2px rgba(255,255,255,0.4) solid;
-    border-bottom: 2px rgba(40,40,40,0.35) solid;
-    border-right: 2px rgba(40,40,40,0.35) solid;
-    padding: 1rem;
+  margin: 13rem;
+  padding: 1rem;
+
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  border-radius: 15px;
+  backdrop-filter: blur(20px);
+  background-color: rgba(255,255,255, 0.354);
+  box-shadow: rgba(0, 0, 0, 0.3) 2px 8px 8px;
+  border: 2px rgba(255,255,255,0.4) solid;
+  border-bottom: 2px rgba(40,40,40,0.35) solid;
+  border-right: 2px rgba(40,40,40,0.35) solid;
 }
 
 .blurImg{
@@ -211,14 +196,19 @@ img{
 }
 
 .img-carrusel{
-  
-  position: relative;
+  border-radius: 36px;
+  background: #15f6ff;
+  box-shadow: inset 15px 15px 29px #11ccd4,
+              inset -15px -15px 29px #19ffff; 
+
+  overflow: hidden;
   z-index: 1;
   width: 920px;
   height:auto;
   opacity: 100%;
-  object-fit: fill;
   border-radius: 15px;
+
+
 }
 
 
@@ -242,6 +232,7 @@ img{
 
 .infoCarrusel{
   display: flex;
+  position: relative;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -276,6 +267,10 @@ img{
 .nosotros{
   font-size: 80px;
   font-weight: bold;
+
+}
+
+.glassContainer{
 
 }
 
