--- a/src/index.css
+++ b/src/index.css
@@ -27,9 +27,17 @@ body{
   padding: 1rem;
 }
 .row{
-  height: 100vh !important;
+ 
   z-index: 1;
 }
+
+.fullh{
+  height: 100vh !important;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .topto{
   min-height: 100%;
 }
@@ -166,11 +174,7 @@ img{
 }
 
 .overLapGlass{
-
-
   padding: 1rem;
-
-
 }
 
 .glassImageCont{
@@ -270,7 +274,17 @@ img{
 
 }
 
+.MV{
+
+  padding: 1.5rem;
+}
+
 .glassContainer{
+  padding-top: 2rem;
+  max-width: 600px;
+  
+
+
 
 }
 
@@ -311,7 +325,7 @@ img{
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 0 120px;
+  padding: 0 2rem;
   text-justify: justify;
 }
 
