--- a/src/index.css
+++ b/src/index.css
@@ -270,10 +270,6 @@ body{
 
 }
 
-.glassContainer{
-
-}
-
 .mision {
   grid-area: mision;
   /* border: 2px solid red; */
@@ -396,6 +392,12 @@ text-shadow:  12px 12px 16px #828282,
   /* justify-content: center; */
   /* text-align: center; */
 /*  */
+.estudioFacti{
+  border: 2px solid red;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
 .estudioMerca{
   grid-area:estudioMerca;
@@ -468,6 +470,7 @@ footer{
     border-bottom: 2px rgba(40,40,40,0.35) solid;
     border-right: 2px rgba(40,40,40,0.35) solid;
     margin: 0 40px;
+    
 }
 
 .card-image{
