--- a/src/index.css
+++ b/src/index.css
@@ -408,38 +408,34 @@ h3{
 }
 
 .eslogan {
-
+  text-align: center;
 
   
   grid-area: eslogan;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   /* border: 2px solid red; */
   font-size: 25px;
-
+  padding: 2rem;
 
 
 
 }
 
 .img-empre {
-  grid-area: img-empre;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  /* border: 2px solid red; */
+  align-items: flex-end;
   font-size: 25px;
-  margin: 0 !important;
-
-  filter: drop-shadow(0 0 20px #1b5e20);
+  padding: 2rem;
 
 
 }
 
-  .empr{
-
+.empr{
+    
   border-radius: 50px;
 
 }
@@ -462,13 +458,6 @@ h3{
 
 }
 
-/* .estudioFacti{
-  /* border: 2px solid red; */
-  /* grid-area:estudioFacti ; */
-  /* display: flex; */
-  /* justify-content: center; */
-  /* text-align: center; */
-/*  */
 .estudioFacti{
   /* border: 2px solid red; */
   display: flex;
@@ -490,13 +479,6 @@ h3{
   justify-content: center;
 }
 
-/* .TargetaUno, 
-.TargetaDos,
-.TargetaTres{
-  border: 2px solid rgb(22, 240, 124);
-  margin: 50px 50px;
-  padding: 80px 20px;
-} */
 
 .organigrama{
   grid-area:organigrama;
@@ -611,9 +593,9 @@ footer{
 
 .card {
   /* border: 2px solid red; */
-
+    padding: 2rem;
     width: 500px;
-    height: 700px;
+    min-height: 700px;
     color: white;
     border-radius: 25px;
     backdrop-filter: blur(12px);
@@ -657,7 +639,7 @@ footer{
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: center;
   justify-content: center;
   
@@ -673,4 +655,50 @@ footer{
   justify-content: center;
 
   }
+  h4{
+    font-size: large;
+  }
+}
+
+.modalHeading{
+  font-size: 2rem;
+}
+
+
+/*modal*/
+/* The Modal (background) */
+.modal {
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto; /* 15% from the top and centered */
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%; /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button */
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
 }
