correcciones, no warnings, modal a tarjetas inferiores

--- a/src/index.css
+++ b/src/index.css
@@ -543,6 +543,10 @@ footer{
   transition: 1s;
 }
 
+.cardInferiorInfo{
+  padding: 1rem 2rem;
+}
+
 .cardInferior{
     max-width: 600px;
     width: auto;
