--- a/src/index.css
+++ b/src/index.css
@@ -396,23 +396,48 @@ h3{
 
 .titleVm{
   font-size: 80px;
-  animation-duration: 5s;
+  /* animation-duration: 5s; */
   animation-name: slidein;
   overflow: hidden;
+  
 }
 
-.titleVm:hover{
-  text-shadow: 2px 2px 2px blue;
-}
+/* .titleVm:hover{
+  
+} */
 
 
-#axis:hover .titleVm{
+
+
+/* #axis:hover .titleVm{
   
   transform: translate(-90px,0);
-	-webkit-transform: translate(-90px,0); /** Chrome & Safari **/
+  -webkit-transform: translate(-90px,0); /** Chrome & Safari **/
+	/*-o-transform: translate(-90px,0); /** Opera **/
+	/*-moz-transform: translate(-90px,0);/** Firefox **/
+  /* transition: all 3s ease-in-out;
+  text-shadow: 2px 2px 2px blue; */
+/*} */
+
+#axis{
+  transform: translate(-90px,0);
+  animation-name: slidein;
+}
+
+#axis:hover .titleVm{
+  transform: translate(-90px,0);
+  -webkit-transform: translate(-90px,0); /** Chrome & Safari **/
 	-o-transform: translate(-90px,0); /** Opera **/
-	-moz-transform: translate(-90px,0); /** Firefox **/
-  transition: all 3s ease-in-out;
+	-moz-transform: translate(-90px,0);/** Firefox **/
+  transition:all 2.5s ease-in-out;
+  text-shadow: 2px 2px 2px blue; 
+ 
+  
+}
+
+#axix:after{
+  transform: translate(-80px,0);
+
 }
 
 
