--- a/src/index.css
+++ b/src/index.css
@@ -402,27 +402,11 @@ h3{
   
 }
 
-/* .titleVm:hover{
-  
-} */
 
-
-
-
-/* #axis:hover .titleVm{
-  
-  transform: translate(-90px,0);
-  -webkit-transform: translate(-90px,0); /** Chrome & Safari **/
-	/*-o-transform: translate(-90px,0); /** Opera **/
-	/*-moz-transform: translate(-90px,0);/** Firefox **/
-  /* transition: all 3s ease-in-out;
-  text-shadow: 2px 2px 2px blue; */
-/*} */
-
-#axis{
+/* #axis{
   transform: translate(-90px,0);
   animation-name: slidein;
-}
+} */
 
 #axis:hover .titleVm{
   transform: translate(-90px,0);
@@ -431,14 +415,29 @@ h3{
 	-moz-transform: translate(-90px,0);/** Firefox **/
   transition:all 2.5s ease-in-out;
   text-shadow: 2px 2px 2px blue; 
- 
-  
 }
 
 #axix:after{
   transform: translate(-80px,0);
 
 }
+
+.titleVv{
+  font-size: 80px;
+  /* animation-duration: 5s; */
+  animation-name: slidein;
+  overflow: hidden;
+}
+
+ .titleVv:hover{
+  transform: translate(90px,0);
+  -webkit-transform: translate(90px,0); /** Chrome & Safari **/
+	-o-transform: translate(90px,0); /** Opera **/
+	-moz-transform: translate(90px,0);/** Firefox **/
+  transition:all 2.5s ease-in-out;
+  text-shadow: 2px 2px 2px blue; 
+}
+
 
 
 .textMision {
